# perplexity-sonar-mcp

./: CHANGELOG.md  pyproject.toml
src/perplexity_mcp/: __init__.py  server.py
tests/: test_server.py
